# reaper-mcp

./: .gitignore  CLAUDE.md  CONTEXT.md  DEVELOPMENT.md  README.md  pyproject.toml  smoke_test.py
evaluations/: README.md  fixture.md  reaper_eval.xml
reaper_mcp/: __init__.py  bridge.py  server.py
reaper_scripts/: reaper_mcp_bridge.py
