[project]
name = "reaper-mcp"
version = "0.1.0"
description = "MCP server that gives Claude Code full control of Reaper via a ReaScript bridge."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
reaper-mcp = "reaper_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reaper_mcp"]
