[project]
name = "reaper-mcp"
version = "0.1.0"
description = "MCP server that gives Claude Code full control of Reaper via a ReaScript bridge."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
# Audio mix analysis (reaper_analyze_mix). Kept optional so the base server
# stays lightweight; imported lazily inside the tool. `pip install -e .[analyze]`.
analyze = [
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "pyloudnorm>=0.1.1",
    "google-genai>=0.3",
]

[project.scripts]
reaper-mcp = "reaper_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reaper_mcp"]
